Revert "Elimina o uso de 'Admin', ajusta a busca para Usuário, Cliente e Loja, melhora a consistência"
This reverts commit f997ff84b1c4306e07ddf5c55d87443294d0fab2.