@@ -12,17 +12,21 @@ import br.ufscar.dc.dsw.AA1Veiculos.domain.Usuario;
 public class UsuarioDetails implements UserDetails {
 
     private final Usuario usuario;
-   
-    public UsuarioDetails(Usuario usuario) {
-        this.usuario = usuario;
-    }
+    private final Collection<? extends GrantedAuthority> authorities;
 
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(usuario.getRole());
-        return Arrays.asList(authority);
+    public UsuarioDetails(Usuario usuario, String role) {
+        this.usuario = usuario;
+        this.authorities = List.of(new SimpleGrantedAuthority(role));
     }
     
+    public Long getId() {
+    	return usuario.getId();
+    }
+
+    public Usuario getUsuario() {
+        return usuario;
+    }
+
     @Override
     public String getUsername() {
         return usuario.getEmail();
@@ -31,6 +35,11 @@ public class UsuarioDetails implements UserDetails {
     @Override
     public String getPassword() {
         return usuario.getSenha();
+    }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return authorities;
     }
 
     @Override
@@ -52,8 +61,4 @@ public class UsuarioDetails implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
-
-    public Usuario getUsuario() {
-		return usuario;
-	}
 }
